--- a/GettingStarted/GettingStarted_Desktop/MainWindow.xaml
+++ b/GettingStarted/GettingStarted_Desktop/MainWindow.xaml
@@ -1,8 +1,8 @@
 ﻿<Window
-    x:Class="GettingStarted.MainWindow"
+    x:Class="GettingStarted_Desktop.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:GettingStarted"
+    xmlns:local="using:GettingStarted_Desktop"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:scheduler="using:Syncfusion.UI.Xaml.Scheduler"
