--- a/GettingStarted/App.xaml
+++ b/GettingStarted/App.xaml
@@ -1,8 +1,8 @@
 ﻿<Application
-    x:Class="GettingStarted_UWP.App"
+    x:Class="GettingStarted.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:GettingStarted_UWP">
+    xmlns:local="using:GettingStarted">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
