--- a/GettingStarted/MainPage.xaml
+++ b/GettingStarted/MainPage.xaml
@@ -1,9 +1,8 @@
 ﻿<Page
-    x:Class="GettingStarted_UWP.MainPage"
+    x:Class="GettingStarted.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:GettingStarted_UWP"
-    xmlns:WinUI_desktop="using:GettingStarted_Desktop"
+    xmlns:local="using:GettingStarted"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
@@ -11,10 +10,16 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Page.DataContext>
-        <WinUI_desktop:SchedulerViewModel/>
+        <local:SchedulerViewModel/>
     </Page.DataContext>
     
     <Grid>
-        <scheduler:SfScheduler x:Name="Schedule" ItemsSource="{Binding Events}" ViewType="Week"/>
+        <scheduler:SfScheduler x:Name="Schedule" ItemsSource="{Binding Events}" ViewType="{Binding ElementName=viewtypecombobox, Path=SelectedValue,Mode=TwoWay}"/>
+        <StackPanel Orientation="Horizontal"
+                            HorizontalAlignment="Right"
+                            VerticalAlignment="Top"
+                            Margin="0,5,10,0">
+            <ComboBox Width="180" Height="30" x:Name="viewtypecombobox" SelectedIndex="2"/>
+        </StackPanel>
     </Grid>
 </Page>
