Integrated BusinessObject sample

--- a/BusinessObject/MainPage.xaml
+++ b/BusinessObject/MainPage.xaml
@@ -1,8 +1,8 @@
 ﻿<Page
-    x:Class="CustomAppointment.MainPage"
+    x:Class="BusinessObject.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:CustomAppointment"
+    xmlns:local="using:BusinessObject"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
@@ -10,7 +10,7 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Page.DataContext>
-        <local:CustomAppointmentViewModel/>
+        <local:BusinessObjectViewModel/>
     </Page.DataContext>
     <Grid>
         <scheduler:SfScheduler x:Name="scheduler"
