--- a/BusinessObject/App.xaml
+++ b/BusinessObject/App.xaml
@@ -1,8 +1,8 @@
 ﻿<Application
-    x:Class="CustomAppointment.App"
+    x:Class="BusinessObject.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:CustomAppointment">
+    xmlns:local="using:BusinessObject">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
