--- a/BusinessObject/MainWindow.xaml
+++ b/BusinessObject/MainWindow.xaml
@@ -1,20 +1,23 @@
 ﻿<Window
-    x:Class="CustomAppointment.MainWindow"
+    x:Class="BusinessObject.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:CustomAppointment"
+    xmlns:local="using:BusinessObject"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:scheduler="using:Syncfusion.UI.Xaml.Scheduler"
     mc:Ignorable="d">
 
     <Grid>
+        <Grid.Resources>
+            <local:EnumDisplayNameConverter x:Key="enumDisplayNameConverter"/>
+        </Grid.Resources>
         <Grid.DataContext>
-            <local:CustomAppointmentViewModel/>
+            <local:BusinessObjectViewModel/>
         </Grid.DataContext>
         <scheduler:SfScheduler x:Name="scheduler"
                                                ItemsSource="{Binding Appointments}"
-                                               ViewType="Week">
+                               ViewType="Week">
             <scheduler:SfScheduler.AppointmentMapping>
                 <scheduler:AppointmentMapping 
                                     Subject="EventName"
