--- a/RecurringAppointment/BusinessObject/App.xaml
+++ b/RecurringAppointment/BusinessObject/App.xaml
@@ -1,8 +1,8 @@
 ﻿<Application
-    x:Class="RecurringAppointment.App"
+    x:Class="RecurringBusinessObjects.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:RecurringAppointment">
+    xmlns:local="using:RecurringBusinessObjects">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
