--- a/RecurringAppointment/BusinessObject/MainWindow.xaml
+++ b/RecurringAppointment/BusinessObject/MainWindow.xaml
@@ -1,8 +1,8 @@
 ﻿<Window
-    x:Class="RecurringAppointment.MainWindow"
+    x:Class="RecurringBusinessObjects.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:RecurringAppointment"
+    xmlns:local="using:RecurringBusinessObjects"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:scheduler="using:Syncfusion.UI.Xaml.Scheduler"
