--- a/CalendarTypes/CalendarTypes/MainWindow.xaml
+++ b/CalendarTypes/CalendarTypes/MainWindow.xaml
@@ -9,6 +9,16 @@
     mc:Ignorable="d">
 
     <Grid>
+        <Grid.Resources>
+            <DataTemplate x:Key="specialRegionTemplate">
+                <Grid Background="{Binding Background}"
+            Opacity="0.5"
+            HorizontalAlignment="Stretch"
+            VerticalAlignment="Stretch">
+                    <Path x:Name="Fork" Data="M11,0 C11.553001,0 12,0.4469986 12,1 L12,15 C12,15.553001 11.553001,16 11,16 10.446999,16 10,15.553001 10,15 L10,7 9,7 C8.4469986,7 8,6.5530014 8,6 L8,3 C8,1.3429985 9.3429985,0 11,0 z M0,0 L1,0 1.2340002,4 1.7810001,4 2,0 3,0 3.2340002,4 3.7810001,4 4,0 5,0 5,4 C5,4.9660001 4.3140001,5.7727499 3.4029064,5.9593439 L3.4007993,5.9597201 3.9114671,14.517 C3.9594617,15.321 3.3195295,16 2.5136147,16 L2.5076156,16 C1.6937013,16 1.0517693,15.309 1.1107631,14.497 L1.7400641,5.9826035 1.6955509,5.9769421 C0.73587513,5.8301721 0,5.0005002 0,4 z" Fill="Black" HorizontalAlignment="Center" Height="16"  Stretch="Fill" VerticalAlignment="Center" Width="12"/>
+                </Grid>
+            </DataTemplate>
+        </Grid.Resources>
         <Grid.DataContext>
             <local:ViewModel/>
         </Grid.DataContext>
@@ -39,10 +49,10 @@
                                         AppointmentDisplayCount="2"/>
             </syncfusion:SfScheduler.MonthViewSettings>
             <syncfusion:SfScheduler.DaysViewSettings>
-                <syncfusion:DaysViewSettings MinimumAppointmentDuration="0:30:0"/>
+                <syncfusion:DaysViewSettings MinimumAppointmentDuration="0:30:0" SpecialTimeRegionTemplate="{StaticResource specialRegionTemplate}"/>
             </syncfusion:SfScheduler.DaysViewSettings>
             <syncfusion:SfScheduler.TimelineViewSettings>
-                <syncfusion:TimelineViewSettings MinimumAppointmentDuration="0:30:0"/>
+                <syncfusion:TimelineViewSettings MinimumAppointmentDuration="0:30:0" SpecialTimeRegionTemplate="{StaticResource specialRegionTemplate}"/>
             </syncfusion:SfScheduler.TimelineViewSettings>
         </syncfusion:SfScheduler>
     </Grid>
