--- a/FareCalendar/FareCalendar_DataTemplateSelector/MainWindow.xaml
+++ b/FareCalendar/FareCalendar_DataTemplateSelector/MainWindow.xaml
@@ -1,8 +1,8 @@
 ﻿<Window
-    x:Class="FareCalendar.MainWindow"
+    x:Class="FareCalendar_DataTemplateSelector.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:FareCalendar"
+    xmlns:local="using:FareCalendar_DataTemplateSelector"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:notification="using:Syncfusion.UI.Xaml.Notifications"
