--- a/HeatMap/SchedulerHeatMap/MainWindow.xaml
+++ b/HeatMap/SchedulerHeatMap/MainWindow.xaml
@@ -5,7 +5,7 @@
     xmlns:local="using:SchedulerHeatMap"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-    xmlns:scheduler="using:Syncfusion.UI.Xaml.Scheduler"
+    xmlns:Scheduler="using:Syncfusion.UI.Xaml.Scheduler"
     mc:Ignorable="d">
     <Grid>
         <Grid.Resources>
@@ -45,11 +45,11 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="100"/>
         </Grid.RowDefinitions>
-        <scheduler:SfScheduler x:Name="scheduler" AppointmentEditFlag="None">
-            <scheduler:SfScheduler.MonthViewSettings>
-                <scheduler:MonthViewSettings MonthCellTemplateSelector="{StaticResource monthCellTemplateSelector}" />
-            </scheduler:SfScheduler.MonthViewSettings>
-        </scheduler:SfScheduler>
+        <Scheduler:SfScheduler x:Name="scheduler" AppointmentEditFlag="None">
+            <Scheduler:SfScheduler.MonthViewSettings>
+                <Scheduler:MonthViewSettings MonthCellTemplateSelector="{StaticResource monthCellTemplateSelector}" />
+            </Scheduler:SfScheduler.MonthViewSettings>
+        </Scheduler:SfScheduler>
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="0.1*"/>
